Fix issue with game state being sticky when restarting. Change button behaviour to be more intuitive.

--- a/akkha/index.html
+++ b/akkha/index.html
@@ -36,8 +36,8 @@
         </div>
         <p align="center">
             <button onclick="start()">Start</button>
-            <button onclick="reset()">Reset</button>
-            <button onclick="generate()">New Pattern</button>
+            <button onclick="restart()">Restart</button>
+            <button onclick="newPattern()">New Pattern</button>
             <button onclick="showHelp()">Help</button>
         </p>
     </div>
