Update stats to be more concise; Add About button

--- a/akkha/index.html
+++ b/akkha/index.html
@@ -9,7 +9,8 @@
 <!-- <body onresize="resize()"> -->
     <p align="center">
         <button onclick="showInstructions()">How To Play</button>
-        <button onclick="showSettings()">About Settings</button>
+        <button onclick="showSettings()">Settings Help</button>
+        <button onclick="showAbout()">About</button>
     </p>
     <div class="center-wrapper-parent">
         <div id="options">
@@ -28,8 +29,7 @@
         </div>
         <div id="stats">
             <div id="numGlyphPassed" align="center">Glyphs passed: 0/0 current, 0/0 total</div>
-            <div id="numGlyphFailed" align="center">Glyphs failed: 0/0 current, 0/0 total</div>
-            <div id="numOrbsTanked" align="center">Magical orbs tanked: 0/0 current, 0/0 total</div>
+            <div id="numOrbsTanked" align="center">Magical orbs avoided: 0/0 current, 0/0 total</div>
         </div>
         <div class="canvas-wrapper">
             <canvas id="akkha-arena" tabindex="1"></canvas>
